force-app/main/default/objects/Volunteer_Compliance__c/Volunteer_Compliance__c.object-meta.xml
<CustomObject>
    <description>Used for tracking all volunteer eligibility requirements including WWC, ACF, courses and certifications.</description>
    <label>Volunteer Compliance</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Volunteer Compliance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Compliance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>