force-app/main/default/objects/Volunteer_Compliance__c/fields/ACF_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ACF_Expiry_Date__c</fullName>
    <description>Formula field based on Date Completed + 3 years (1095 days)</description>
    <formula>Date_Completed__c + 1095</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field based on Date Completed + 3 years</inlineHelpText>
    <label>ACF Expiry Date</label>
    <type>Date</type>
</CustomField>