force-app/main/default/objects/Volunteer_Compliance__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <inlineHelpText>Matches to Volunteer Criteria on volunteers portal</inlineHelpText>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Learning</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>