force-app/main/default/objects/Volunteer_Compliance__c/fields/Litmos_Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Course_ID__c</fullName>
    <inlineHelpText>The course ID in Litmos, used for the Volunteer Portal assignment.</inlineHelpText>
    <label>Litmos Course ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>