force-app/main/default/objects/Volunteer_Compliance__c/fields/Litmos_Course_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Course_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checks against Litmos Due Date</inlineHelpText>
    <label>Litmos Course Overdue</label>
    <type>Checkbox</type>
</CustomField>