force-app/main/default/objects/Volunteer_Compliance__c/fields/Litmos_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Due_Date__c</fullName>
    <inlineHelpText>Date assigned as Due in litmos</inlineHelpText>
    <label>Litmos Due Date</label>
    <type>Date</type>
</CustomField>