force-app/main/default/objects/Volunteer_Compliance__c/fields/PercentageComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentageComplete__c</fullName>
    <inlineHelpText>Pulled from Litmos</inlineHelpText>
    <label>PercentageComplete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>