force-app/main/default/objects/Volunteer_Compliance__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This document has had it&apos;s authenticity verified by a CQ staff member</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>