force-app/main/default/objects/Volunteer_Compliance__c/fields/Volunteer_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Criteria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Criteria</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Volunteer_Criteria__c.Criteria_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Volunteer_Criteria__c</referenceTo>
    <relationshipLabel>Volunteer Compliance</relationshipLabel>
    <relationshipName>Volunteer_Compliance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>