force-app/main/default/objects/Volunteer_Compliance__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <label>Volunteer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Compliance</relationshipLabel>
    <relationshipName>Volunteer_Compliance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>