force-app/main/default/objects/Volunteer_Compliance__c/recordTypes/Compliance.recordType-meta.xml
<RecordType>
    <fullName>Compliance</fullName>
    <active>true</active>
    <description>For tracking volunteer compliance such as online learning, licenses, certifications and policies.</description>
    <label>Compliance</label>
</RecordType>