force-app/main/default/objects/Volunteer_Compliance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Criteria__c</columns>
    <columns>Volunteer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Criteria_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Litmos_Course_ID__c</columns>
    <columns>PercentageComplete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>